--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,6 +109,7 @@ jobs:
           tag: ${{ steps.extract.outputs.tag }}
           target: ${{ matrix.target }}
           platforms: "linux/amd64"
+          load: "true"
 
   complete:
     needs:
