--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,97 +42,158 @@ jobs:
           ./generate.py
           git diff --exit-code
 
-  changes:
+  targets:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read # Required to analyze file changes
     outputs:
-      dockerfiles: ${{ steps.filter.outputs.dockerfiles }}
+      amd64: ${{ steps.amd64.outputs.distros }}
+      arm64: ${{ steps.arm64.outputs.distros }}
+      has_changes: ${{ steps.filter.outputs.affected == 'true' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-      - name: Find Changed Dockerfiles
+
+      - name: Find changed files
+        uses: dorny/paths-filter@v3
         id: filter
+        with:
+          filters: |
+            docker:
+              - '*.Dockerfile'
+            action:
+              - '.github/actions/docker-*/*'
+            affected:
+              - '*.Dockerfile'
+              - '.github/actions/docker-*/*'
+
+      - name: amd64 targets
         run: |
-          # Find changed .Dockerfile files between the PR branch and the base branch
-          changed_files=$(git diff --name-only origin/${{ github.base_ref }}...HEAD -- '*.Dockerfile')
-          echo "Changed Dockerfiles: $changed_files"
+          {
+            echo "## AMD64"
+          } >> "$GITHUB_STEP_SUMMARY"
+      - name: Generate list of amd64 targets (filtered)
+        id: amd64
+        uses: ./.github/actions/docker-targets
+        with:
+          changed: ${{ steps.filter.outputs.docker_files }}
+          all: ${{ steps.filter.outputs.action }}
 
-          # Output the results as JSON
-          if [ -z "$changed_files" ]; then
-            echo '["none"]' > changed_dockerfiles.json
-          else
-            echo "$changed_files" | jq -R -s -c 'split("\n")[:-1]' > changed_dockerfiles.json
-          fi
-          echo "dockerfiles=$(cat changed_dockerfiles.json)" >> $GITHUB_OUTPUT
+      - name: arm64 targets
+        run: |
+          {
+            echo "## ARM64"
+          } >> "$GITHUB_STEP_SUMMARY"
 
-  docker-build:
-    needs: changes
+      - name: Generate list of arm64 targets (filtered)
+        id: arm64
+        uses: ./.github/actions/docker-targets
+        with:
+          platform: "linux/arm64"
+          changed: ${{ steps.filter.outputs.docker_files }}
+          all: ${{ steps.filter.outputs.action }}
+
+  bake-build-amd64:
+    name: Build (${{ matrix.family }}:${{ matrix.distro }} @ amd64
+    needs: targets
+    if: ${{ needs.targets.outputs.has_changes }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        dockerfile: ${{ fromJSON(needs.changes.outputs.dockerfiles) }}
-        target: ["base", "dev", "full", "gazebo"]
+        include: ${{ fromJSON(needs.targets.outputs.amd64) }}
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Build via composite action
+        uses: ./.github/actions/docker-bake
+        with:
+          family: ${{ matrix.family }} # e.g. ros2
+          distro: ${{ matrix.distro }} # e.g. rolling
+          ghcr-username: ${{ github.actor }} # optional
+          ghcr-password: ${{ secrets.GITHUB_TOKEN }} # optional
+          push: "false"
+
+  bake-build-arm64:
+    name: Build (${{ matrix.family }}:${{ matrix.distro }} @ arm64)
+    needs: targets
+    if: ${{ needs.targets.outputs.has_changes }}
+    runs-on: ubuntu-24.04-arm
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJSON(needs.targets.outputs.arm64) }}
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Build via composite action
+        uses: ./.github/actions/docker-bake
+        with:
+          family: ${{ matrix.family }} # e.g. ros2
+          distro: ${{ matrix.distro }} # e.g. rolling
+          ghcr-username: ${{ github.actor }} # optional
+          ghcr-password: ${{ secrets.GITHUB_TOKEN }} # optional
+          push: "false"
+
+  merge-manifests:
+    name: Merge manifests (${{ matrix.family }}:${{ matrix.distro }})
+    needs:
+      - bake-build-amd64
+      - bake-build-arm64
+      - targets
+    if: ${{ fromJSON(needs.targets.outputs.has_changes) }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJSON(needs.targets.outputs.amd64) }}
     permissions:
       contents: read
-      packages: read
+      packages: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v6
+      - name: Download bake metadata artifacts
+        uses: actions/download-artifact@v4
         with:
-          python-version: 3.x
-          cache: pip
+          pattern: bake-metadata-${{ matrix.family }}-${{ matrix.distro }}-*
+          path: bake-metadata
+          merge-multiple: true
 
-      - run: pip install -r requirements.txt
-
-      - name: Extract Label and Tag
-        id: extract
-        run: |
-          # Extract the full filename (e.g., label/tag.Dockerfile)
-          filename="${{ matrix.dockerfile }}"
-
-          # Extract label (e.g., 'label')
-          label=$(dirname "$filename")
-
-          # Extract tag (e.g., 'tag')
-          tag=$(basename "$filename" | cut -d. -f1)
-
-          echo "Label: $label, Tag: $tag"
-
-          # Set outputs for subsequent steps
-          echo "label=$label" >> $GITHUB_OUTPUT
-          echo "tag=$tag" >> $GITHUB_OUTPUT
-
-      - name: Check if target exists
-        id: target
-        run: |
-          python .github/scripts/check_target.py \
-            --label "${{ steps.extract.outputs.label }}" \
-            --tag "${{ steps.extract.outputs.tag }}" \
-            --target "${{ matrix.target }}"
-
-      - name: Build docker
-        id: docker
-        if: ${{ matrix.dockerfile != 'none' && steps.target.outputs.exists == 'true' }}
-        uses: ./.github/actions/docker-build-push
+      - name: Merge manifests
+        uses: ./.github/actions/docker-merge
         with:
-          label: ${{ steps.extract.outputs.label }}
-          tag: ${{ steps.extract.outputs.tag }}
-          target: ${{ matrix.target }}
-          platforms: "linux/amd64"
+          family: ${{ matrix.family }}
+          distro: ${{ matrix.distro }}
+          metadata: |
+            bake-metadata
+          ghcr-username: ${{ github.repository_owner }}
+          ghcr-password: ${{ secrets.GITHUB_TOKEN }}
+          dry-run: "true"
 
   complete:
     needs:
       - lint
       - generate
-      - docker-build
+      - merge-manifests
+    if: ${{ always() && !cancelled() && needs.merge-manifests.result != 'cancelled' }}
     runs-on: ubuntu-latest
     steps:
       - name: Check
-        run: echo "Completed successfully!"
+        run: |
+          if [ "${{ needs.lint.result }}" != 'success' ]; then
+            echo "Lint failed"
+            exit 1
+          fi
+          if [ "${{ needs.generate.result }}" != 'success' ]; then
+            echo "Generate failed"
+            exit 1
+          fi
+          if [ "${{ needs.merge-manifests.result }}" != 'skipped' ] && \
+             [ "${{ needs.merge-manifests.result }}" != 'success' ]; then
+            echo "Docker failed"
+            exit 1
+          fi
+          echo "Completed successfully"
