--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,6 @@ jobs:
   targets:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.matrix.outputs.stages }}
       amd64: ${{ steps.amd64.outputs.distros }}
       arm64: ${{ steps.arm64.outputs.distros }}
       has_changes: ${{ steps.filter.outputs.affected == 'true' }}
@@ -84,13 +83,6 @@ jobs:
             affected:
               - '*.Dockerfile'
               - '.github/actions/docker-*/*'
-
-      - name: Generate list of targets (filtered)
-        id: matrix
-        uses: ./.github/actions/docker-targets
-        with:
-          changed: ${{ steps.filter.outputs.docker_files }}
-          all: ${{ steps.filter.outputs.action }}
 
       - name: amd64 targets
         run: |
@@ -202,6 +194,7 @@ jobs:
     needs:
       - lint
       - generate
+      - action-tests
       - merge-manifests
     if: ${{ always() && !cancelled() && needs.merge-manifests.result != 'cancelled' }}
     runs-on: ubuntu-latest
@@ -214,6 +207,10 @@ jobs:
           fi
           if [ "${{ needs.generate.result }}" != 'success' ]; then
             echo "Generate failed"
+            exit 1
+          fi
+          if [ "${{ needs.action-tests.result }}" != 'success' ]; then
+            echo "Action tests failed"
             exit 1
           fi
           if [ "${{ needs.merge-manifests.result }}" != 'skipped' ] && \
